--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.21.2
-pandas==1.1.3
-tensorflow==2.3.1
-keras==2.4.3
-scikit-learn==0.23.2
-matplotlib==3.3.2
+numpy
+pandas
+tensorflow
+keras
+scikit-learn
+matplotlib
