--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,16 @@
 name = "remla-project"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Eren Aydoslu <erenaydoslue@icloud.com>"]
 readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.10"
+tensorflow = "~2.10"
+tensorflow-io-gcs-filesystem = "0.27.0"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
-tensorflow = "^2.16.1"
-keras = "^3.3.3"
 scikit-learn = "^1.4.2"
 matplotlib = "^3.8.4"
 
