--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ numpy = "^1.26.4"
 pandas = "^2.2.2"
 scikit-learn = "^1.4.2"
 matplotlib = "^3.8.4"
+dvc = "^3.50.1"
+dvc-gdrive = "^3.0.1"
 
 
 [build-system]
