--- a/.pylintrc
+++ b/.pylintrc
@@ -10,117 +10,8 @@ unsafe-load-any-extension=no
 
 [MESSAGES CONTROL]
 confidence=
-disable=print-statement,
-        parameter-unpacking,
-        unpacking-in-except,
-        old-raise-syntax,
-        backtick,
-        long-suffix,
-        old-ne-operator,
-        old-octal-literal,
-        import-star-module-level,
-        non-ascii-bytes-literal,
-        raw-checker-failed,
-        bad-inline-option,
-        locally-disabled,
-        file-ignored,
-        suppressed-message,
-        useless-suppression,
-        deprecated-pragma,
-        use-symbolic-message-instead,
-        apply-builtin,
-        basestring-builtin,
-        buffer-builtin,
-        cmp-builtin,
-        coerce-builtin,
-        execfile-builtin,
-        file-builtin,
-        long-builtin,
-        raw_input-builtin,
-        reduce-builtin,
-        standarderror-builtin,
-        unicode-builtin,
-        xrange-builtin,
-        coerce-method,
-        delslice-method,
-        getslice-method,
-        setslice-method,
-        no-absolute-import,
-        old-division,
-        dict-iter-method,
-        dict-view-method,
-        next-method-called,
-        metaclass-assignment,
-        indexing-exception,
-        raising-string,
-        reload-builtin,
-        oct-method,
-        hex-method,
-        nonzero-method,
-        cmp-method,
-        input-builtin,
-        round-builtin,
-        intern-builtin,
-        unichr-builtin,
-        map-builtin-not-iterating,
-        zip-builtin-not-iterating,
-        range-builtin-not-iterating,
-        filter-builtin-not-iterating,
-        using-cmp-argument,
-        eq-without-hash,
-        div-method,
-        idiv-method,
-        rdiv-method,
-        exception-message-attribute,
-        invalid-str-codec,
-        sys-max-int,
-        bad-python3-import,
-        deprecated-string-function,
-        deprecated-str-translate-call,
-        deprecated-itertools-function,
-        deprecated-types-field,
-        next-method-defined,
-        dict-items-not-iterating,
-        dict-keys-not-iterating,
-        dict-values-not-iterating,
-        deprecated-operator-function,
-        deprecated-urllib-function,
-        xreadlines-attribute,
-        deprecated-sys-function,
-        exception-escape,
-        comprehension-escape
-
-enable=c-extension-no-member,
-        import,
-        unnecessary-iteration-pandas,
-        unnecessary-iteration-tensorflow,
-        nan-numpy,
-        chain-indexing-pandas,
-        datatype-pandas,
-        column-selection-pandas,
-        merge-parameter-pandas,
-        inplace-pandas,
-        dataframe-conversion-pandas,
-        scaler-missing-scikitlearn,
-        hyperparameters-scikitlearn,
-        hyperparameters-tensorflow,
-        hyperparameters-pytorch,
-        memory-release-tensorflow,
-        deterministic-pytorch,
-        randomness-control-numpy,
-        randomness-control-scikitlearn,
-        randomness-control-tensorflow,
-        randomness-control-pytorch,
-        randomness-control-dataloader-pytorch,
-        missing-mask-tensorflow,
-        missing-mask-pytorch,
-        tensor-array-tensorflow,
-        forward-pytorch,
-        gradient-clear-pytorch,
-        pipeline-not-used-scikitlearn,
-        dependent-threshold-scikitlearn,
-        dependent-threshold-tensorflow,
-        dependent-threshold-pytorch
+disable=import-error
+enable=
 
 
 [REPORTS]
@@ -176,7 +67,6 @@ indent-after-paren=4
 indent-string='    '
 max-line-length=120
 max-module-lines=1000
-no-space-check=trailing-comma, dict-separator
 single-line-class-stmt=no
 single-line-if-stmt=no
 
@@ -218,4 +108,4 @@ valid-classmethod-first-arg=cls
 valid-metaclass-classmethod-first-arg=cls
 
 [EXCEPTIONS]
-overgeneral-exceptions=Exception
+overgeneral-exceptions=builtins.Exception
