Fixed all the pylint errors, removed annoying duplicate-code warning (doesn't work well this test heavy module)

--- a/.pylintrc
+++ b/.pylintrc
@@ -10,7 +10,7 @@ unsafe-load-any-extension=no
 
 [MESSAGES CONTROL]
 confidence=
-disable=import-error, no-name-in-module, sk-pipeline
+disable=import-error, no-name-in-module, sk-pipeline, duplicate-code
 enable=
 
 
